# play_routes_compiler_cli

./: .bazelrc  .bazelversion  .gitignore  .travis.yml  BUILD  README.md  WORKSPACE  play_routes_compiler_cli_maven_install.json  play_routes_compiler_cli_test_maven_install.json  test_workspace.bzl  workspace.bzl
.github/workflows/: ci.yml  publish.yml
play-routes-compiler/: BUILD.bazel  pom.template.xml
play-routes-compiler/src/main/scala/: CommandLinePlayRoutesCompiler.scala
scala/: BUILD.bazel  version.bzl
scripts/: gen-deps.sh  publish.sh
test/: BUILD.bazel  PlayForwardRoutesOnlyTest.scala  PlayReverseRoutesOnlyTest.scala  PlayRoutesCompilerTest.scala  play_routes_compiler_bazel_e2e_test.sh  reproducibility_test.sh  run_all_tests.sh
test/app/binders/: package.scala
test/app/controllers/: Controller1.scala  Controller2.scala  Controller3.scala  GeneratorController.scala  NamespaceReverseRoutesController.scala  ReverseRoutesController.scala  UserController.scala
test/app/model/: User.scala
test/conf/: additional_imports.routes  application.conf  basic1.routes  basic2.routes  generator.routes  large.routes  namespace_router.routes  reverse_router.routes
to_deploy/: pom.xml
