load("@rules_scala_annex//rules:scala.bzl", scala_binary_annex = "scala_binary")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@bazel-common//tools/maven:pom_file.bzl", "pom_file")
load("@env_vars//:env_vars.bzl", "COMPILER_CLI_ARTIFACT_ID", "COMPILER_CLI_VERSION")

scala_binary(
    name = "play-routes-compiler",
    srcs = glob(["src/main/**/*.scala"]),
    main_class = "rulesplayroutes.routes.CommandLinePlayRoutesCompiler",
    scalacopts = [
        "-Xfatal-warnings",
        "-deprecation",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@play_routes_compiler_cli_maven//:com_github_scopt_scopt_2_13",
        "@play_routes_compiler_cli_maven//:com_typesafe_play_routes_compiler_2_13",
        "@play_routes_compiler_cli_maven//:org_scala_lang_scala_reflect",
    ],
)

#artifact_id = COMPILER_CLI_ARTIFACT_ID if len(COMPILER_CLI_ARTIFACT_ID) > 0 else "play_routes_compiler_cli"
#version = COMPILER_CLI_VERSION if len(COMPILER_CLI_VERSION) > 0 else "non-published-SNAPSHOT"
#
#pom_file(
#  name = "pom",
#  targets = [":play-routes-compiler"],
#  template_file = "pom.template.xml",
#  substitutions = {
#    "ARTIFACT_ID": artifact_id,
#    "VERSION": version
#    }
#)
