load(
    "@rules_scala_annex//rules:scala.bzl",
    "configure_bootstrap_scala",
    "configure_zinc_scala",
)
load(":version.bzl", "scala_version")

compiler_classpath = [
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala_compiler",
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala_library",
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala_reflect",
]

runtime_classpath = [
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala_library",
]

configure_bootstrap_scala(
    name = "bootstrap",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala_version,
)

configure_zinc_scala(
    name = "zinc",
    compiler_bridge = "@play_routes_compiler_cli_maven//:org_scala_sbt_compiler_bridge_2_13",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala_version,
    visibility = ["//visibility:public"],
)

alias(
    name = "default_scala",
    actual = ":zinc",
    visibility = ["//visibility:public"],
)
