load(
    "@rules_scala_annex//rules:scala.bzl",
    "configure_bootstrap_scala",
    "configure_zinc_scala",
)
load(":version.bzl", "scala3_version")

compiler_classpath = [
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala3_compiler_3",
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala3_library_3",
]

runtime_classpath = [
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala3_library_3",
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala3_interfaces",
    "@play_routes_compiler_cli_maven//:org_scala_lang_tasty_core_3",
]

configure_bootstrap_scala(
    name = "bootstrap",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala3_version,
)

configure_zinc_scala(
    name = "zinc",
    compiler_bridge = "@play_routes_compiler_cli_maven//:org_scala_lang_scala3_sbt_bridge",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala3_version,
    visibility = ["//visibility:public"],
)

alias(
    name = "default_scala",
    actual = ":zinc",
    visibility = ["//visibility:public"],
)
